src/snapshots/sel__tests__lexing-2.snap
---
source: src/tests.rs
expression: "t(b\"coucou\")"
---
Token(Location(0, 0..6), Word("coucou"))
Token(Location(0, 6..6), End)
