src/snapshots/sel__tests__lexing-3.snap
---
source: src/tests.rs
expression: "t(b\"[a 1 b, {w, x, y, z}, 0.5]\")"
---
Token(Location(0, 0..1), OpenBracket)
Token(Location(0, 1..2), Word("a"))
Token(Location(0, 3..4), Number(1.0))
Token(Location(0, 5..6), Word("b"))
Token(Location(0, 6..7), Comma)
Token(Location(0, 8..9), OpenBrace)
Token(Location(0, 9..10), Word("w"))
Token(Location(0, 10..11), Comma)
Token(Location(0, 12..13), Word("x"))
Token(Location(0, 13..14), Comma)
Token(Location(0, 15..16), Word("y"))
Token(Location(0, 16..17), Comma)
Token(Location(0, 18..19), Word("z"))
Token(Location(0, 19..20), CloseBrace)
Token(Location(0, 20..21), Comma)
Token(Location(0, 22..25), Number(0.5))
Token(Location(0, 25..26), CloseBracket)
Token(Location(0, 26..26), End)
