src/snapshots/sel__tests__lexing-5.snap
---
source: src/tests.rs
expression: "t(b\"42 :*: 0x2a 0b101010 0o52\")"
---
Token(Location(0, 0..2), Number(42.0))
Token(Location(0, 3..6), Bytes([42]))
Token(Location(0, 7..11), Number(42.0))
Token(Location(0, 12..20), Number(42.0))
Token(Location(0, 21..25), Number(42.0))
Token(Location(0, 25..25), End)
