src/snapshots/sel__tests__lexing-6.snap
---
source: src/tests.rs
expression: "t(b\"oh-no; don't let use be the def of cat!\")"
---
Token(Location(0, 0..5), Word("oh-no"))
Token(Location(0, 5..6), Unknown(";"))
Token(Location(0, 7..10), Word("don"))
Token(Location(0, 10..11), Unknown("'"))
Token(Location(0, 11..12), Word("t"))
Token(Location(0, 13..16), Let)
Token(Location(0, 17..20), Use)
Token(Location(0, 21..23), Word("be"))
Token(Location(0, 24..27), Word("the"))
Token(Location(0, 28..31), Def)
Token(Location(0, 32..34), Word("of"))
Token(Location(0, 35..38), Word("cat"))
Token(Location(0, 38..39), Unknown("!"))
Token(Location(0, 39..39), End)
