src/snapshots/sel__tests__lexing-7.snap
---
source: src/tests.rs
assertion_line: 34
expression: "t(b\"\nnormal\n# comment\nnormal again\n#-comment not comment\n#- comment again not comment\na #- [ba ba ba] b\na #- 239084 b\na #- :yeeesldkfj: b\na #- {one, [two], [{three}]} b\na #- {one, #-[two], [{three}]} b\n{heyo, #-baba, owieur} # the ',' is also commented\n{heyo, baba, #-owieur} # the '}' isn't\n\")"
---
Token(Location(0, 1..7), Word("normal"))
Token(Location(0, 18..24), Word("normal"))
Token(Location(0, 25..30), Word("again"))
Token(Location(0, 41..44), Word("not"))
Token(Location(0, 45..52), Word("comment"))
Token(Location(0, 64..69), Word("again"))
Token(Location(0, 70..73), Word("not"))
Token(Location(0, 74..81), Word("comment"))
Token(Location(0, 82..83), Word("a"))
Token(Location(0, 98..99), Word("b"))
Token(Location(0, 100..101), Word("a"))
Token(Location(0, 112..113), Word("b"))
Token(Location(0, 114..115), Word("a"))
Token(Location(0, 132..133), Word("b"))
Token(Location(0, 134..135), Word("a"))
Token(Location(0, 163..164), Word("b"))
Token(Location(0, 165..166), Word("a"))
Token(Location(0, 196..197), Word("b"))
Token(Location(0, 198..199), OpenBrace)
Token(Location(0, 199..203), Word("heyo"))
Token(Location(0, 203..204), Comma)
Token(Location(0, 213..219), Word("owieur"))
Token(Location(0, 219..220), CloseBrace)
Token(Location(0, 249..250), OpenBrace)
Token(Location(0, 250..254), Word("heyo"))
Token(Location(0, 254..255), Comma)
Token(Location(0, 256..260), Word("baba"))
Token(Location(0, 260..261), Comma)
Token(Location(0, 270..271), CloseBrace)
Token(Location(0, 287..287), End)
