src/snapshots/sel__tests__parsing-24.snap
---
source: src/tests.rs
expression: "t(b\":1:, tostr, _\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    12..13,
                ),
                UnknownName {
                    name: "_",
                    expected_type: Func(
                        Bytes(
                            true,
                        ),
                        Named(
                            "returnof(typeof(_))",
                        ),
                    ),
                },
            ),
        ],
    ),
)
